[gd_scene load_steps=2 format=3 uid="uid://cyj0vc7vtyr5w"]

[ext_resource type="Script" uid="uid://d1eulovbhxjx5" path="res://Scripts/Menu.gd" id="1_06sn7"]

[node name="Test" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06sn7")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="MarginContainerPanel" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/MarginContainerPanel"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/MarginContainerPanel/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Label" type="Label" parent="VBoxContainer/MarginContainerPanel/PanelContainer/MarginContainer"]
layout_mode = 2
text = "000"

[node name="Control" type="Control" parent="VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_horizontal = 4
horizontal_scroll_mode = 0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 3

[node name="DamageShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Damage"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="DamageButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="HealthShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Health"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="HealthButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="RadiusShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Radius"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="RadiusButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="CadenceShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Cadence"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="CadenceButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="CoinShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Coin"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="CoinButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="BulletShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bullet"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BulletButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="RegenerationShop" type="PanelContainer" parent="VBoxContainer/ScrollContainer/GridContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer"]
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/h_separation = 100
columns = 2

[node name="TitleText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Regeneration"

[node name="Level" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "LV.0"
horizontal_alignment = 2

[node name="PriceText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Price"

[node name="Price" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="BonusText" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "Bonus"

[node name="Bonus" type="Label" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/GridContainer"]
layout_mode = 2
text = "000"
horizontal_alignment = 2

[node name="RegenerationButton" type="Button" parent="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Click here"

[node name="MarginContainerButton" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/MarginContainerButton"]
layout_mode = 2
columns = 2

[node name="TimeButton" type="Button" parent="VBoxContainer/MarginContainerButton/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "x0.0"

[node name="PlayButton" type="Button" parent="VBoxContainer/MarginContainerButton/GridContainer"]
custom_minimum_size = Vector2(1000, 0)
layout_mode = 2
size_flags_vertical = 3
text = "Play"

[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/DamageShop/MarginContainer/VBoxContainer/DamageButton" to="." method="_on_damage_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/HealthShop/MarginContainer/VBoxContainer/HealthButton" to="." method="_on_health_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/RadiusShop/MarginContainer/VBoxContainer/RadiusButton" to="." method="_on_radius_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/CadenceShop/MarginContainer/VBoxContainer/CadenceButton" to="." method="_on_cadence_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/CoinShop/MarginContainer/VBoxContainer/CoinButton" to="." method="_on_coin_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/BulletShop/MarginContainer/VBoxContainer/BulletButton" to="." method="_on_bullet_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/GridContainer/RegenerationShop/MarginContainer/VBoxContainer/RegenerationButton" to="." method="_on_regeneration_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainerButton/GridContainer/TimeButton" to="." method="_on_time_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MarginContainerButton/GridContainer/PlayButton" to="." method="_on_play_button_pressed"]
